package com.uml.a5generalizationIsA.withInterface;

public interface Animal {
    void eat();
    void sleep();
}
