package com.uml.a5generalizationIsA.withInterface;

// Pet interface representing properties and behaviors of pets
    public interface Pet {
        void play();
        void cuddle();
    }
